<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/facebookBackground"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/titillium_web_bold"
        android:paddingTop="170dp"
        android:text="@string/facebook"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <EditText
        android:id="@+id/emailED"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_top_edittext"
        android:hint="@string/email_or_phone_number"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="#D1D0D0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/facebook"

        />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="1dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_bottom_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColorHint="#D1D0D0"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailED" />

    <TextView
        android:id="@+id/spacer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:background="#D1D0D0"
        app:layout_constraintBottom_toTopOf="@id/Password"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailED" />

    <Button
        android:id="@+id/loginButton"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="#4F69A2"
        android:letterSpacing="0"
        android:padding="15dp"
        android:text="@string/log_in_button"
        android:textAllCaps="false"
        android:textColor="#E0F0FF"
        android:textSize="25sp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/Password" />

    <Button
        android:id="@+id/signUP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:background="@android:color/transparent"
        android:text="@string/sign_up_for_facebook"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="@string/help_center"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signUP"

        />


</androidx.constraintlayout.widget.ConstraintLayout>